--- a/cart.html
+++ b/cart.html
@@ -159,5 +159,6 @@
             </aside>
         </div>
     <script src="/assets/js/scripts.js"></script>
+    <script src="/assets/js/cart.js"></script>
 </body>
 </html>
