--- a/index.html
+++ b/index.html
@@ -407,10 +407,10 @@
       </div>
     </div>
   </div>
-  <a href="cart.html" class="cart-icon position-fixed rounded-circle text-center text-white shadow" style="width: 55px; height: 55px; bottom: 3%; right: 45px; background-color: #FF4B2B; z-index: 2000;">
+  <a href="cart.html" class="cart-icon position-fixed rounded-circle text-center text-white shadow" style="width: 55px; height: 55px; bottom: 3%; right: 45px; background-color: #FF4B2B; z-index: 10;">
     <i class="fa-solid fa-basket-shopping" style="line-height:55px; font-size: 22px; transition: .6s ease;"></i>
-    <div class="rounded-pill position-absolute top-0" style="height: 20px; right: -10px; padding: 0 0.4rem; background-color: #f9e686;">
-      <p class="cartItems fw-bold text-dark" style="font-size: 0.8rem;">20</p>
+    <div class="rounded-pill position-absolute top-0 shadow border border-secondary" style="height: 20px; right: -10px; padding: 0 0.4rem; background-color: #f9e686;">
+      <p class="cartItems fw-bold text-dark" style="font-size: 0.8rem; transform: translateY(-1px);">20</p>
     </div>
 </a>
     <script src="/assets/js/scripts.js"></script>
