Add preload animation

--- a/cart.html
+++ b/cart.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="/assets/css/cart.css">
 </head>
 <body>
+    <div class="preload-bg w-100 h-100 bg-white"><div class="spinner"></div></div> 
+
     <nav class="navbar navbar-expand-md bg-light d-block p-0">
         <div class="container-fluid row justify-content-center ms-0 py-3">
             <a class="navbar-brand d-block col-12 col-md-2 text-center" href="#"><img style="width: 200px;" src="/assets/img/logo.png" alt="" srcset=""></a>
@@ -158,6 +160,7 @@
                 </div>
             </aside>
         </div>
+    <script src="/assets/js/itemsList.js"></script>
     <script src="/assets/js/scripts.js"></script>
     <script src="/assets/js/cart.js"></script>
 </body>
