--- a/contact.html
+++ b/contact.html
@@ -50,13 +50,13 @@
                 <li class="nav-item active" ><a href="#scrollHome" class="nav-link">Trang chủ</a></li>
                     <li class="nav-item"><a href="#scrollIntroduction" class="nav-link">Giới thiệu</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="Sanpham.html" id="dropdownMenuLink">
-                        Sản phẩm
-                        </a>                  
-                        <ul class="dropdown-menu shadow p-0 mb-2" aria-labelledby="dropdownMenuLink">
-                          <li><a class="dropdown-item py-2 rounded-top" href="Sanpham.html#scrollForMen">Nam</a></li>
-                          <li><a class="dropdown-item py-2 rounded-bottom" href="Sanpham.html#scrollForWomen">Nữ</a></li>
-                        </ul>
+                        <a class="nav-link dropdown-toggle" href="Sanpham.html" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                            Sản phẩm
+                            </a>                  
+                            <ul class="dropdown-menu shadow p-0 mb-2 rounded-0" aria-labelledby="dropdownMenuLink">
+                              <li><a class="dropdown-item py-2 fw-bold" href="Sanpham.html#scrollForMen">Nam</a></li>
+                              <li><a class="dropdown-item py-2 fw-bold" href="Sanpham.html#scrollForWomen">Nữ</a></li>
+                            </ul>
                     </li>
                     <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
                     <li class="nav-item"><a href="#scrollContact" class="nav-link">Liên hệ</a></li>
