--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar sticky-top shadow navbar-expand-md bg-light d-block p-0">
         <div class="topnav container-fluid row justify-content-center ms-0 py-3" style="transition: .5s ease;">
-            <a class="navbar-brand d-block col-12 col-md-2 text-center" href="#"><img style="width: 200px;" src="/assets/img/logo.png" alt="" srcset=""></a>
+            <a class="navbar-brand d-block col-12 col-md-2 text-center" href="index.html"><img style="width: 200px;" src="/assets/img/logo.png" alt="" srcset=""></a>
             <button class="navbar-toggler d-block d-md-none col-1 lh-base bg-transparent text-center" style="border: none!important;" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon" style="transform: translateX(-2px);"><i class="fa-solid fa-bars"></i></span>
             </button>
@@ -28,7 +28,7 @@
               <input class="form-control me-2 rounded-pill searchbar" type="search" placeholder="Search" aria-label="Search">
               <button class="btn rounded-circle" type="submit" style="width: 38px; background-color: #ef3f1d;"><i class="fa-solid fa-magnifying-glass text-light" style="font-size: 1rem; transform: translateX(-2px);"></i></button>
             </form>
-            <a class="col-1 text-center ps-0 ps-md-3 me-3 me-md-0" href="">
+            <a class="col-1 text-center ps-0 ps-md-3 me-3 me-md-0" href="cart.html">
                 <button class="btn position-relative" type="submit"><i class="fa-solid fa-basket-shopping"></i>
                   <div class="rounded-pill position-absolute" style="height: 15px; top: 2px; right: 2px; padding: 0 0.3rem; background-color: #ef3f1d;">
                     <p class="cartItems fw-bold text-light" style="font-size: 0.7rem; transform: translateY(-1px);">0</p>
@@ -47,19 +47,20 @@
             </div>
             <div class="offcanvas-body" style="background-color: #ffd643; height: 40px;">
               <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
-                <li class="nav-item active" ><a href="#scrollHome" class="nav-link">Trang chủ</a></li>
+                <li class="nav-item active" ><a href="index.html" class="nav-link">Trang chủ</a></li>
                     <li class="nav-item"><a href="#scrollIntroduction" class="nav-link">Giới thiệu</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="Sanpham.html" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" id="dropdownMenuLink" href="product.html">
                             Sản phẩm
-                            </a>                  
+                            </a>
+                                              
                             <ul class="dropdown-menu shadow p-0 mb-2 rounded-0" aria-labelledby="dropdownMenuLink">
-                              <li><a class="dropdown-item py-2 fw-bold" href="Sanpham.html#scrollForMen">Nam</a></li>
-                              <li><a class="dropdown-item py-2 fw-bold" href="Sanpham.html#scrollForWomen">Nữ</a></li>
+                              <li><a class="dropdown-item py-2 fw-bold" href="product.html#scrollForMen">Nam</a></li>
+                              <li><a class="dropdown-item py-2 fw-bold" href="product.html#scrollForWomen">Nữ</a></li>
                             </ul>
                     </li>
                     <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
-                    <li class="nav-item"><a href="#scrollContact" class="nav-link">Liên hệ</a></li>
+                    <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
               </ul>
             </div>
           </div>
@@ -160,7 +161,7 @@
             <div class="mb-3">
               <label for="" class="form-label ps-2">Họ và tên</label>
               <input type="text"
-                class="form-control" aria-describedby="helpId" minlength="5" required placeholder="Nino Nakano">
+                class="form-control" aria-describedby="helpId" minlength="2" required placeholder="Nino Nakano">
             </div>
             <div class="mb-3">
               <label for="" class="form-label ps-2">Email</label>
@@ -169,11 +170,11 @@
             <div class="mb-3">
                 <label for="" class="form-label ps-2">Số điện thoại</label>
                 <input type="text"
-                  class="form-control" minlength="9" maxlength="12" required id="" aria-describedby="helpId" placeholder="0969696969">
+                  class="form-control" minlength="6" required id="" aria-describedby="helpId" placeholder="0969696969">
               </div>
             <div class="mb-3">
               <label for="" class="form-label ps-2">Nội dung</label>
-              <textarea class="form-control" minlength="15" required rows="5"></textarea>
+              <textarea class="form-control" minlength="10" required rows="5"></textarea>
             </div>
             <button type="submit" class="btn rounded-pill fw-bold" style="background-color: #ffd643;">Gửi</button>
         </form>
