--- a/cart.html
+++ b/cart.html
@@ -8,19 +8,19 @@
     <script src="https://kit.fontawesome.com/fff06ecf43.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Passion+One&family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/cart.css">
+    <link rel="stylesheet" href="./assets/css/cart.css">
 </head>
 <body>
     <div class="preload-bg w-100 h-100 bg-white"><div class="spinner"></div></div> 
 
     <nav class="navbar sticky-top shadow navbar-expand-md bg-light d-block p-0">
         <div class="topnav container-fluid row justify-content-center ms-0 py-3" style="transition: .5s ease;">
-            <a class="navbar-brand d-block col-12 col-md-2 text-center" href="index.html"><img style="width: 200px;" src="/assets/img/logo.png" alt="" srcset=""></a>
+            <a class="navbar-brand d-block col-12 col-md-2 text-center" href="index.html"><img style="width: 200px;" src="./assets/img/logo.png" alt="" srcset=""></a>
             <button class="navbar-toggler d-block d-md-none col-1 lh-base bg-transparent text-center" style="border: none!important;" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon" style="transform: translateX(-2px);"><i class="fa-solid fa-bars"></i></span>
             </button>
@@ -165,8 +165,8 @@
                 </div>
             </aside>
         </div>
-    <script src="/assets/js/itemsList.js"></script>
-    <script src="/assets/js/scripts.js"></script>
-    <script src="/assets/js/cart.js"></script>
+    <script src="./assets/js/itemsList.js"></script>
+    <script src="./assets/js/scripts.js"></script>
+    <script src="./assets/js/cart.js"></script>
 </body>
 </html>
