form return false

--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
     </div>
   </div>
     <div class="row m-auto pt-4" style="max-width: 600px;">
-        <form action="#" onsubmit="clickSuccessModal();">
+        <form action="#" onsubmit="clickSuccessModal(); return false;">
 
             <div class="mb-3">
               <label for="" class="form-label ps-2">Họ và tên</label>
