add footer to contact page

--- a/index.html
+++ b/index.html
@@ -338,13 +338,13 @@
                 <li>
                     <a href="#!" class="text-white">
                         <i class="bi bi-envelope"></i>
-                        Shoes_shop1@gmail.com
+                        Onlyshoes1@gmail.com
                     </a>
                 </li>
                 <li>
                     <a href="#!" class="text-white">
                         <i class="bi bi-envelope"></i>
-                        Shoes_shop2@gmail.com
+                        Onlyshoes2@gmail.com
                     </a>
                 </li>
                 </ul>
@@ -360,7 +360,7 @@
         <!-- Copyright -->
         <div class="text-center fw-bold text-dark p-3" style="background-color: #ffd643;">
         © 2022 Copyright:
-        <a class="text-dark fw-bold" href="http://127.0.0.1:5500/index.html?#!">Shoesshop.com</a>
+        <a class="text-dark fw-bold" href="http://127.0.0.1:5500/index.html?#!">Onlyshoesshop.com</a>
         </div>
         <!-- Copyright -->
     </footer>
