add scroll to top

--- a/product.html
+++ b/product.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bán giày nè</title>
+    <title>Có bán giày nè</title>
+    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/fff06ecf43.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -49,7 +50,7 @@
                 <div class="offcanvas-body" style="background-color: #ffd643; height: 40px;">
                     <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                         <li class="nav-item active" ><a href="index.html" class="nav-link">Trang chủ</a></li>
-                        <li class="nav-item"><a href="#scrollIntroduction" class="nav-link">Giới thiệu</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#website-unavailable">Giới thiệu</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="dropdownMenuLink" href="product.html">Sản phẩm</a>               
                             <ul class="dropdown-menu shadow p-0 mb-2 rounded-0" aria-labelledby="dropdownMenuLink">
@@ -58,13 +59,29 @@
                                 <li><a class="dropdown-item py-2 fw-bold" href="product.html#scrollForWomen">Nữ</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#website-unavailable">Blog</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </nav>
+
+    <div class="modal fade" id="website-unavailable" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" style="width: 500px!important; max-width: 50%;">
+            <div class="modal-content border-0" style="border-radius: 1rem;">
+                <div class="modal-header border-0 pb-0">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body pt-0  text-center">
+                    <p class="text-center fw-bolder">Trang web này đang trong quá trình hoàn thiện. </br>Mong bạn thông cảm.</p>
+                    <img class="w-50 mb-4 rounded-circle" src="./assets/img/ninosadface.jpg" alt="" srcset="">
+                    <p class="text-center mb-0 fw-bold website-available">Hiện tại các trang đã hoàn thiện bao gồm:</p>
+                    <p class="website-available px-5">Trang chủ, sản phẩm, liên hệ, giỏ hàng và popup đăng nhập/đăng ký.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     
     <div class="modal fade" id="singnup-login-modal" tabindex="-1" aria-labelledby="singnup-login-modal-Label" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
@@ -186,10 +203,14 @@
             <div class="toast-body"></div>
         </div>
     </div>
-    <a href="cart.html" class="cart-icon position-fixed rounded-circle text-center text-white shadow" style="width: 55px; height: 55px; bottom: 3%; right: 45px; background-color: #FF4B2B; z-index: 10;">
-        <i class="fa-solid fa-basket-shopping" style="line-height:55px; font-size: 22px; transition: .6s ease;"></i>
-        <div class="rounded-pill position-absolute top-0 shadow" style="height: 20px; right: -10px; border: solid 2px #ffb700 ;padding: 0 0.4rem; background-color: #f9e686;">
-            <p class="cartItems fw-bold text-dark" style="font-size: 0.8rem; transform: translateY(-2px);"></p>
+    
+    <button class="rounded-circle scroll-to-top position-fixed border-0" onclick="scrollToTop();">
+        <i class="fa-solid fa-chevron-right text-light"></i>
+    </button>
+    <a href="cart.html" class="cart-icon position-fixed rounded-circle text-center text-white shadow">
+        <i class="fa-solid fa-basket-shopping"></i>
+        <div class="rounded-pill position-absolute top-0 shadow">
+            <p class="cartItems fw-bold text-dark"></p>
         </div>
     </a>
 
