--- a/index.html
+++ b/index.html
@@ -154,14 +154,31 @@
             </div>
         </div>
     </div>
+    
+    <div class="container-fluid justify-content-center row mt-5">
+        <div class="col-3 services text-center">
+            <img class="mb-1" src="./assets/img/fast-delivery.png" alt="" style="width: 30%;">
+            <h5 class="fw-bold mb-0">Giao hàng nhanh</h5>
+            <p class="text-black-50" style="font-size: .9rem;">Vận chuyển nhanh toàn quốc từ 1 đến 2 ngày.</p>
+        </div>
+        <div class="col-3 services text-center">
+            <img class="mb-1" src="./assets/img/high-quality.png" alt="" style="width: 30%;">
+            <h5 class="fw-bold mb-0">Cam kết chất lượng</h5>
+            <p class="text-black-50" style="font-size: .9rem;">Nói không với hàng kém chất lượng, bảo hành trọn đời.</p>
+        </div>
+        <div class="col-3 services text-center">
+            <img class="mb-1" src="./assets/img/best-price.png" alt="" style="width: 30%;">
+            <h5 class="fw-bold mb-0">Giá cả tốt nhất</h5>
+            <p class="text-black-50" style="font-size: .9rem;">Cam kết bán với giá tốt nhất thị trường.</p>
+        </div>
+    </div>
     <!-- Body contents -->
     <div class="content-container container-fluid mt-5">
         <div class="text-title text-center container m-auto row justify-content-center" id="text-title">
-            <h1 class="col-12 fw-bolder text-uppercase">BẠN CÓ MUỐN SỞ HỮU MỘT ĐÔI GIÀY ĐẸP KHÔNG ?</h1>
+            <h1 class="col-12 fw-bolder text-uppercase">Người bạn đồng hành tin cậy </br>trên những chặng đường</h1>
             <p class="col-10">
-                Bạn không hài lòng với đôi giày của bạn hiện tại? <br>
-                Bạn cần một đôi giày đẹp và chất lượng? <br>
-                Công việc của bạn đòi hỏi phải thay đổi nhiều đôi giày khác nhau?
+                Để có những chuyến đi êm ái không thể thiếu một đôi giày tốt.<br>
+                Ở đây chúng tôi có những đôi giày chính hãng và chất lượng với giá siêu mềm.
             </p>
         </div>
 
@@ -190,9 +207,10 @@
 
         <!-- Text2 -->
         <div class="text-title text-center container m-auto row justify-content-center" id="text-title" style="margin-top: 5rem!important;">
-            <h1 class="col-12 fw-bolder text-uppercase">Bạn cần nhiều đôi giày để thay đổi ?</h1>
-            <p class="col-10">Hiểu được điều này Shoes Shop ra đời dựa trên sự yêu thích giày và mong muốn cho các bạn một trải nghiệm tốt, Shoes Shop
-                mang đến sự đa dạng, thoải mái và êm ái để bạn có thể sử dụng khi đi dạo, đi chơi, hay đi làm...</p>
+            <h1 class="col-12 fw-bolder text-uppercase">Mua sắm hết ý không lo đau ví</h1>
+            <p class="col-10">Sản phẩm chúng tôi cam kết luôn có giá cả tốt nhất thị trường, cùng với dịch vụ bảo hành trọn đời.<br>
+                Cam kết đổi mới 100% đối với sản phẩm lỗi do nhà sản xuất trong vòng 15 ngày đầu và bảo hành hở keo trọn đời.
+            </p>
         </div>
 
         <!-- Hot-selling products -->
