--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="offcanvas-body" style="background-color: #ffd643; height: 40px;">
                     <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
-                        <li class="nav-item active" ><a href="#scrollHome" class="nav-link">Trang chủ</a></li>
+                        <li class="nav-item active" ><a href="#" onclick="scrollToTop();" class="nav-link">Trang chủ</a></li>
                         <li class="nav-item"><a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#website-unavailable">Giới thiệu</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="dropdownMenuLink" href="product.html">Sản phẩm</a>               
